--- a/Exp2/.vscode/launch.json
+++ b/Exp2/.vscode/launch.json
@@ -2,6 +2,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - Search",
+            "request": "launch",
+            "mainClass": "Search",
+            "projectName": "Exp2_a0585e4"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - Main",
+            "request": "launch",
+            "mainClass": "Main",
+            "projectName": "Exp2_a0585e4"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - ReadAllLineTest",
             "request": "launch",
             "mainClass": "ReadAllLineTest"
